--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
           fetch-depth: 0
       - name: Execute Gradle build
         run: make build
+      - name: Generate coverage report
+        run: make report
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
